# PhoenixOS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  config.json
boot/: BOOTX64.efi  CMakeLists.txt  Makefile  boot.sh
boot/src/: Main.c
kernel/: CMakeLists.txt  Makefile  kernel.sh  linker.ld
kernel/include/: APIC.hpp  CPU.hpp  GDT.hpp  Graphics.hpp  Heap.hpp  IDT.hpp  Module.hpp  PIC.hpp  PIT.hpp  PhoenixOS.hpp  PhysicalMemoryManager.hpp  QemuLogger.hpp  Scheduler.hpp  Timer.hpp  VirtualMemoryManager.hpp  XSDT.hpp  elf.h
kernel/src/: APIC.cpp  CPU.asm  CPU.cpp  GDT.asm  GDT.cpp  Graphics.cpp  Heap.cpp  IDT.asm  IDT.cpp  Kernel.cpp  Module.cpp  PIC.cpp  PIT.cpp  PhoenixUtils.cpp  PhysicalMemoryManager.cpp  QemuLogger.cpp  Scheduler.cpp  VirtualMemoryManager.cpp  XSDT.cpp  crt0.s  entry.asm
modules/: CMakeLists.txt  modules.cfg
modules/graphics/: CMakeLists.txt  Makefile
modules/graphics/src/: Graphics.cpp
